# servactory

./: .gitignore  .rspec_status  .rubocop.yml  .yardopts  Appraisals  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  PLAN_SCHEMA_SUPPORT.md  README.md  Rakefile  Steepfile  c_optimization_opportunities_1.md  c_optimization_opportunities_2.md  new_configuration_plan.md  rbs_collection.lock.yaml  rbs_collection.yaml  servactory.gemspec  service_factory.gemspec
.github/: CODEOWNERS  release-drafter.yml  release.yml
.github/workflows/: gem-publishing.yml  i18n.yml  release-notes.yml  rubocop.yml  test.yml  update-changelog.yaml
config/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ru.yml
docs/: README.md  docusaurus.config.js  package.json
docs/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  getting-started.md  testing.md
docs/pages/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  getting-started.md  home.md  i18n.md  testing.md
ext/: README.md
ext/servactory/: Cargo.toml  extconf.rb  servactory.c
ext/servactory/src/: factory.rs  lib.rs
gemfiles/: rails_4.2.gemfile  rails_5.0.gemfile  rails_5.1.gemfile  rails_5.2.gemfile  rails_6.0.gemfile  rails_6.1.gemfile  rails_7.0.gemfile  rails_7.1.gemfile  rails_7.2.gemfile  rails_8.0.gemfile  rails_8.0.rc1.gemfile  rails_8.0.rc2.gemfile  rails_8.1.gemfile
lib/: servactory.rb  service_factory.rb
scripts/: validate_locales.rb
sig/: datory.rbs  input_argument_helper.rbs  input_attribute_helper.rbs
spec/: spec_helper.rb
website/: docusaurus.config.js  package.json
(+2562 files in other folders)
